--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@tailwindcss/line-clamp": "^0.4.4",
         "aos": "^2.3.4",
+        "apexcharts": "^3.50.0",
         "chart.js": "^4.4.1",
         "chartjs-adapter-moment": "^1.0.1",
         "datatables.net-dt": "^2.0.3",
